--- a/data-analysis/notebooks/magisterka.ipynb
+++ b/data-analysis/notebooks/magisterka.ipynb
@@ -2,21 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c79c747a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import random as rd\n",
+    "import time\n",
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7cf44050-ab61-4c93-b30f-b1b893072069",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test\n"
+      "Dostępne urządzenia GPU: [PhysicalDevice(name='/physical_device:CPU:0', device_type='CPU'), PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
      ]
     }
    ],
    "source": [
-    "print(\"test\")"
+    "import tensorflow as tf\n",
+    "\n",
+    "print(\"Dostępne urządzenia GPU:\", tf.config.list_physical_devices())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12075f33-e659-4960-bd7a-a0d831df6cf8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -35,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.0rc1"
   }
  },
  "nbformat": 4,
